# SlideForge-api

./: .coverage  .env.example  Dockerfile  FRONTEND_INTEGRATION_PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/: config.py  dependencies.py  exceptions.py  main.py
src/api/: router.py
src/api/v1/: health.py  presentation.py
src/schemas/: common.py  presentation.py
src/services/: ai_service.py  file_service.py  presentation_service.py
src/utils/: logging.py  security.py
tests/: conftest.py  test_ai_service.py  test_api.py  test_file_service.py  test_schemas.py
